--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,25 @@
 PORT=5000
 MONGO_URI=
+# JWT
+JWT_SECRET=
+JWT_EXPIRES_IN=
+
+# Google OAuth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
+BASE_URL=
+# NEW: Frontend URL
+FRONTEND_URL=
+
+# Email (for Nodemailer)
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASS=
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
