--- a/package.json
+++ b/package.json
@@ -12,19 +12,30 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "bcrypt": "^6.0.0",
+        "cloudinary": "^2.7.0",
         "cors": "^2.8.5",
         "dotenv": "^17.2.1",
         "express": "^5.1.0",
+        "google-auth-library": "^10.2.1",
         "helmet": "^8.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "moment-timezone": "^0.6.0",
         "mongoose": "^8.17.1",
         "morgan": "^1.10.1",
+        "multer": "^2.0.2",
+        "nodemailer": "^7.0.5",
         "zod": "^4.0.17"
     },
     "devDependencies": {
+        "@types/bcrypt": "^6.0.0",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/morgan": "^1.9.10",
+        "@types/multer": "^2.0.0",
         "@types/node": "^24.2.1",
+        "@types/nodemailer": "^7.0.1",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.9.2"
     }
