--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@types/node-cron": "^3.0.11",
         "bcrypt": "^6.0.0",
         "cloudinary": "^2.7.0",
         "cors": "^2.8.5",
@@ -24,6 +25,7 @@
         "mongoose": "^8.17.1",
         "morgan": "^1.10.1",
         "multer": "^2.0.2",
+        "node-cron": "^4.2.1",
         "nodemailer": "^7.0.5",
         "zod": "^4.0.17"
     },
