--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@payos/node": "^2.0.3",
         "@types/node-cron": "^3.0.11",
         "bcrypt": "^6.0.0",
         "cloudinary": "^2.7.0",
