--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.922.0",
         "@payos/node": "^2.0.3",
         "@types/node-cron": "^3.0.11",
         "bcrypt": "^6.0.0",
@@ -28,6 +29,7 @@
         "multer": "^2.0.2",
         "node-cron": "^4.2.1",
         "nodemailer": "^7.0.5",
+        "uuid": "^13.0.0",
         "zod": "^4.0.17"
     },
     "devDependencies": {
@@ -39,6 +41,7 @@
         "@types/multer": "^2.0.0",
         "@types/node": "^24.2.1",
         "@types/nodemailer": "^7.0.1",
+        "@types/uuid": "^10.0.0",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.9.2"
     }
