--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@aws-sdk/client-s3": "^3.922.0",
         "@payos/node": "^2.0.3",
         "@types/node-cron": "^3.0.11",
+        "axios": "^1.13.2",
         "bcrypt": "^6.0.0",
         "cloudinary": "^2.7.0",
         "cors": "^2.8.5",
@@ -29,6 +30,10 @@
         "multer": "^2.0.2",
         "node-cron": "^4.2.1",
         "nodemailer": "^7.0.5",
+        "openai": "^6.8.1",
+        "pdf-parse": "^2.4.5",
+        "pdf-poppler": "^0.2.3",
+        "pdf2pic": "^3.2.0",
         "uuid": "^8.3.2",
         "zod": "^4.0.17"
     },
