--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "pdf-parse": "^2.4.5",
         "pdf-poppler": "^0.2.3",
         "pdf2pic": "^3.2.0",
+        "socket.io": "^4.8.1",
         "uuid": "^8.3.2",
         "zod": "^4.0.17"
     },
@@ -46,6 +47,7 @@
         "@types/multer": "^2.0.0",
         "@types/node": "^24.2.1",
         "@types/nodemailer": "^7.0.1",
+        "@types/socket.io": "^3.0.1",
         "@types/uuid": "^10.0.0",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.9.2"
