--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
    "version": "1.0.0",
    "main": "index.js",
    "scripts": {
-      "dev": "concurrently \"npm run dev:server\" \"npm run dev:worker\"",
+      "dev": "concurrently \"npm run dev:server\" \"npm run dev:worker\"  \"npm run dev:noti\" ",
       "dev:server": "ts-node-dev --respawn --transpile-only src/server.ts",
       "dev:worker": "ts-node-dev --respawn --transpile-only src/jobs/embedding.worker.ts",
+      "dev:noti": "ts-node-dev --respawn --transpile-only src/jobs/notification.worker.ts",
       "build": "tsc",
-      "start": "concurrently \"npm run start:server\" \"npm run start:worker\"",
+      "start": "concurrently \"npm run start:server\" \"npm run start:worker\" \"npm run start:noti\"",
       "start:server": "node dist/server.js",
-      "start:worker": "node dist/jobs/embedding.worker.js"
+      "start:worker": "node dist/jobs/embedding.worker.js",
+      "start:noti": "node dist/jobs/notification.worker.js"
    },
    "keywords": [],
    "author": "",
