--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
       "pdf2pic": "^3.2.0",
       "socket.io": "^4.8.1",
       "uuid": "^8.3.2",
-      "zod": "^4.0.17"
+      "zod": "^4.0.17",
+      "concurrently": "^9.2.1"
    },
    "devDependencies": {
       "@types/bcrypt": "^6.0.0",
@@ -59,7 +60,6 @@
       "@types/nodemailer": "^7.0.1",
       "@types/socket.io": "^3.0.1",
       "@types/uuid": "^10.0.0",
-      "concurrently": "^9.2.1",
       "ts-node-dev": "^2.0.0",
       "typescript": "^5.9.2"
    }
