fix: why wrong yml???

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,6 @@ jobs:
            with:
               context: .
               push: true
-              # Tag theo run_number để versioning
               tags: ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE_NAME }}:${{ github.run_number }}
               cache-from: type=gha
               cache-to: type=gha,mode=max
@@ -36,10 +35,9 @@ jobs:
       needs: build-and-push
       runs-on: ubuntu-latest
 
-      # === QUAN TRỌNG: Dòng này giúp đọc được secret trong Environment 'production' ===
+      # KHÔNG dùng url: ở đây để tránh lỗi "Unrecognized secret"
       environment:
          name: production
-         url: https://${{ secrets.DOMAIN_NAME }}
 
       steps:
          - name: Deploy to EC2
@@ -48,41 +46,57 @@ jobs:
               host: ${{ secrets.EC2_HOST }}
               username: ${{ secrets.EC2_USER }}
               key: ${{ secrets.EC2_SSH_KEY }}
-              port: ${{ secrets.EC2_SSH_PORT || '22' }} # Mặc định 22 nếu chưa set port
+              port: ${{ secrets.EC2_SSH_PORT || '22' }}
               script: |
-                 # --- 1. THIẾT LẬP BIẾN ---
+                 # ========================================================
+                 # 1. THIẾT LẬP BIẾN & LÀM SẠCH DỮ LIỆU (FIX LỖI KÝ TỰ LẠ)
+                 # ========================================================
                  VERSION="${{ github.run_number }}"
                  FULL_IMAGE="${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_IMAGE_NAME }}:$VERSION"
                  CONTAINER_NAME="web-app-production"
-                 DOMAIN_NAME="${{ secrets.DOMAIN_NAME }}"
                  INTERNAL_PORT="${{ secrets.CONTAINER_INTERNAL_PORT }}"
 
-                 echo "🚀 Bắt đầu Deploy Version: $VERSION"
+                 # Lấy domain từ secret và dùng lệnh 'tr' để xóa sạch khoảng trắng, tab, xuống dòng thừa
+                 RAW_DOMAIN="${{ secrets.DOMAIN_NAME }}"
+                 DOMAIN_NAME=$(echo "$RAW_DOMAIN" | tr -d '[:space:]')
 
-                 # --- 2. KÉO IMAGE MỚI ---
+                 echo "🚀 Bắt đầu Deploy Version: $VERSION"
+                 echo "domain sạch: [$DOMAIN_NAME]"
+
+                 # ========================================================
+                 # 2. KÉO IMAGE & BACKUP
+                 # ========================================================
                  docker pull $FULL_IMAGE
 
-                 # --- 3. BACKUP CONTAINER CŨ ---
                  if [ "$(docker ps -q -f name=$CONTAINER_NAME)" ]; then
                      echo "⚠️ Đang backup container cũ..."
                      docker rename $CONTAINER_NAME "${CONTAINER_NAME}_backup"
                      docker stop "${CONTAINER_NAME}_backup"
                  fi
 
-                 # --- 4. TẠO FILE ENV TỪ SECRET ---
-                 # Xóa file cũ nếu có
+                 # ========================================================
+                 # 3. TẠO FILE ENV (FIX LỖI DATABASE URL)
+                 # ========================================================
                  rm -f .env.production
-                 # Ghi nội dung secret vào file mới
                  echo "${{ secrets.ENV_FILE }}" > .env.production
 
-                 # Kiểm tra nhanh xem file có dữ liệu không (không in ra log để bảo mật)
+                 # Kiểm tra file env có dữ liệu không
                  if [ ! -s .env.production ]; then
                      echo "❌ LỖI: File .env.production bị rỗng. Kiểm tra lại Secret!"
+                     # Rollback ngay nếu thiếu env
+                     if [ "$(docker ps -a -q -f name=${CONTAINER_NAME}_backup)" ]; then
+                         docker rename "${CONTAINER_NAME}_backup" $CONTAINER_NAME
+                         docker start $CONTAINER_NAME
+                     fi
                      exit 1
                  fi
 
-                 # --- 5. CHẠY CONTAINER MỚI (TRAEFIK MODE) ---
+                 # ========================================================
+                 # 4. CHẠY CONTAINER MỚI (FIX LỖI TRAEFIK ROUTER)
+                 # ========================================================
                  echo "🔥 Đang khởi chạy container..."
+
+                 # Lưu ý: Biến DOMAIN_NAME ở đây đã được làm sạch
                  docker run -d \
                    --name $CONTAINER_NAME \
                    --network web_network \
@@ -95,19 +109,18 @@ jobs:
                    -l "traefik.http.services.$CONTAINER_NAME.loadbalancer.server.port=$INTERNAL_PORT" \
                    $FULL_IMAGE
 
-                 # --- 6. HEALTH CHECK & ROLLBACK ---
+                 # ========================================================
+                 # 5. HEALTH CHECK & ROLLBACK TỰ ĐỘNG
+                 # ========================================================
                  echo "fz Đang kiểm tra sức khỏe ứng dụng..."
                  sleep 15 
 
                  if [ "$(docker ps -q -f name=$CONTAINER_NAME)" ]; then
                      echo "✅ DEPLOY THÀNH CÔNG!"
-                     
-                     # Dọn dẹp
                      docker rm -f "${CONTAINER_NAME}_backup" || true
                      docker image prune -a -f --filter "until=24h"
                  else
                      echo "❌ THẤT BẠI! Container bị crash. Đang Rollback..."
-                     
                      docker rm -f $CONTAINER_NAME || true
                      
                      if [ "$(docker ps -a -q -f name=${CONTAINER_NAME}_backup)" ]; then
@@ -135,6 +148,4 @@ jobs:
                  Dự án: ${{ github.repository }}
                  Phiên bản: ${{ github.run_number }}
                  Trạng thái: ${{ job.status }}
-                 Tên miền: ${{ secrets.DOMAIN_NAME }}
-                 ------------------------------------------
                  Log: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
