--- a/.env.example
+++ b/.env.example
@@ -2,19 +2,19 @@ PORT=5000
 MONGO_URI=
 # JWT
 JWT_SECRET=
-JWT_EXPIRES_IN=
+JWT_EXPIRES_IN=1d
 
 # Google OAuth
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
-BASE_URL=
+BASE_URL=http://localhost:5000
 # NEW: Frontend URL
-FRONTEND_URL=
+FRONTEND_URL=http://localhost:5173
 
 # Email (for Nodemailer)
-EMAIL_HOST=
-EMAIL_PORT=
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
 EMAIL_USER=
 EMAIL_PASS=
 
@@ -23,3 +23,22 @@ CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 
+# Payos
+PAYOS_CLIENT_ID=
+PAYOS_API_KEY=
+PAYOS_CHECKSUM_KEY=
+
+# Cloudflare R2
+R2_ACCOUNT_ID=
+R2_ACCESS_KEY_ID=
+R2_SECRET_ACCESS_KEY=
+R2_BUCKET_NAME=
+R2_PUBLIC_URL=
+
+# PayosPayout
+PAYOS_CLIENT_ID_PAYOUT=
+PAYOS_API_KEY_PAYOUT=
+PAYOS_CHECKSUM_KEY_PAYOUT=
+
+OPENAI_API_KEY=
+REDIS_URL=
