--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Production Deployment (Traefik Integration)
 
 on:
    push:
-      branches: ["master"]
+      branches: ["staging"]
 
 jobs:
    # ---- GIAI ĐOẠN 1: BUILD & PUSH ----
