feat: recommendation tutor by embedding

--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
    "version": "1.0.0",
    "main": "index.js",
    "scripts": {
-      "dev": "concurrently \"npm run dev:server\" \"npm run dev:worker\"  \"npm run dev:noti\" \"npm run dev:email\" ",
+      "dev": "concurrently \"npm run dev:server\" \"npm run dev:worker\"  \"npm run dev:noti\" \"npm run dev:email\" \"npm run dev:match\" ",
       "dev:server": "ts-node-dev --respawn --transpile-only src/server.ts",
       "dev:worker": "ts-node-dev --respawn --transpile-only src/jobs/embedding.worker.ts",
       "dev:noti": "ts-node-dev --respawn --transpile-only src/jobs/notification.worker.ts",
       "dev:email": "ts-node-dev --respawn --transpile-only src/jobs/email.worker.ts",
+      "dev:match": "ts-node-dev --respawn --transpile-only src/jobs/match.worker.ts",
       "build": "tsc",
-      "start": "concurrently \"npm run start:server\" \"npm run start:worker\" \"npm run start:noti\" \"npm run start:email\" ",
+      "start": "concurrently \"npm run start:server\" \"npm run start:worker\" \"npm run start:noti\" \"npm run start:email\" \"npm run start:match\" ",
       "start:server": "node dist/server.js",
       "start:worker": "node dist/jobs/embedding.worker.js",
       "start:noti": "node dist/jobs/notification.worker.js",
-      "start:email": "node dist/jobs/email.worker.js"
+      "start:email": "node dist/jobs/email.worker.js",
+      "start:match": "node dist/jobs/match.worker.js"
    },
    "keywords": [],
    "author": "",
